data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_284.wast
;; 5. **Backward Branch with Unmatched Operands:**    - Test Description: Implement a loop with non-matching operand types and include a `br` instruction with incorrect operand handling that causes the loop to continue erroneously and hit an `unreachable` instruction.    - Constraint: This ensures correct operand handling and type matching in backward branches targeting loops.

(assert_invalid
  (module
    (func $invalid_backward_branch_operand (result i32)
      (loop (result i32)
        (br 0 (f32.const 1.0)) ;; incorrect operand type
        (i32.const 0)
      )
      (unreachable)
    )
  )
  "type mismatch"
)